# ml-pipeline-with-airflow-docker-operator

./: airflow.cfg  airflow.db  docker-compose.yaml  pyproject.toml  standalone_admin_password.txt
dags/: ml_pipeline_with_docker_operator.py
